--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Monaco F1 Track Game</h1>
     <div id="game">
-        <img id="f1-track" src="/Users/sergioruiz/Desktop/F1sim/turns/monaco_turn_0.jpg" alt="Monaco F1 Track with Car at Turn 1">
+        <img id="f1-track" src=".../monaco_turn_0.jpg" alt="Monaco F1 Track with Car at Turn 1">
         <div id="controls">
             <label for="turn-input">Enter Turn Number:</label>
             <input type="number" id="turn-input" min="1" max="21">  <button id="move-car">Move Car</button>
